--- a/Algorithm/lecture/AlgorithmStudy/L7.md
+++ b/Algorithm/lecture/AlgorithmStudy/L7.md
@@ -346,41 +346,361 @@ int main() {
 
 ### 예제 1 : 거듭제곱 구하기 1
 
+재귀함수 디자인 예제
 
+* n의 m승을 재귀함수를 이용하여 계산하라
+
+  1) 함수의 역할을 말로 정확하게 정의한다.
+
+  2) 기저조건(Base condition)에서 함수가 제대로 동작함을 보인다.
+
+  3) 함수가 (작은 input에 대하여) 제대로 동작한다고 가정하고 함수를 완성한다.
+
+* getPower(n, m) = n의 m을 반환하는 함수
+
+  ex) getPower(2, 4) = 16
+
+  getPower(n, 0) = 1  <- 정의가 이렇게 되어있음. 기저조건.
+
+  getPower(n, m) = getPower(n, m-1) x n
+
+  ```c
+  int getPower(int n, int m) {
+    if(m==0)
+      return 1;
+    else
+      return getPower(n, m-1) * n;
+  }
+  ```
+
+  
 
 ### 예제 1 : 거듭제곱 구하기 2
+
+```c
+// n^m 구하기
+
+#include <stdio.h>
+
+int getPower(int n, int m) {
+  // n^m을 반환하는 함수
+  
+  if(m == 0)
+    return 1;
+  else
+    return getPower(n, m-1) * n;
+}
+
+int main() {
+  int n, m;
+  
+  scanf("%d %d", &n, &m);
+  
+  printf("%d\n", getPower(n, m));
+
+  return 0;
+}
+```
 
 
 
 ### 예제 2 : N to M 1
 
+[예제] N to M
+
+* N부터 M까지 합을 구하라 (단, N<=M)
+
+어떻게 문제 속에서 재귀적 패턴을 파악할 것인가? (규칙 찾기)
+
+```
+3 + 4 + 5 + 6 + 7 + 8 + 9 + 10
+(3 + 4 + 5 + 6 + 7 + 8 + 9) + 10
+자연수의 합을 구하기 위해, 자연수의 합을 이용할 수 있다
+재귀적 패턴
+```
+
+#### 재귀함수 디자인을 위한 3가지 절차
+
+1) 함수의 역할을 말로 정확하게 정의한다.
+
+2) 기저조건(Base condition)에서 함수가 제대로 동작함을 보인다.
+
+3) 함수가 (작은 input에 대하여) 제대로 동작한다고 가정하고 함수를 완성한다.
+
+
+
+getSum(n, m) = n부터 m까지의 합을 구하는 함수
+
+ex) getSum(1, 4) = 10
+
+getSum(n, n) = n  기저조건
+
+getSum(n, m) = getSum(n, m-1) + m
+
+```c
+int getSum(int n, int m) {
+  if(n == m)
+    return n;
+  else
+    return getSum(n, m-1) + m;
+}
+```
+
 
 
 ### 예제 2 : N to M 2
+
+```c
+// N to M
+
+#include <stdio.h>
+
+int getSum(int n, int m) {
+  // n 부터 m 까지의 합을 반환하는 함수
+  
+  if(n == m)
+    return n;
+  else
+    return getSum(n, m-1) + m;
+}
+
+int main() {
+  int n, m;
+  
+  scanf("%d %d", &n, &m);
+  
+  printf("%d\n", getSum(n, m));
+  return 0;
+}
+```
 
 
 
 ### 예제 3 : 각 자릿수의 합 1
 
+[예제] 각 자릿수의 합
+
+* 십진수 N을 입력받아 각 자릿수의 합을 구하시오
+
+  재귀적 패턴 파악 필요  //  좀 더 작은 것들은 다 이미 풀려있다고 가정
+
+```
+입력의 예
+10
+출력의 예
+1
+
+입력의 예
+12321
+출력의 예
+9
+```
+
+getDisitSum(x) : x의 각 자릿수의 합을 반환하는 함수
+
+getDisitSum(x) = x   if x가 한자리 수일 경우
+
+getDisitSum(x) = getDisitSum(x/10) + (x%10) 
+
 
 
 ### 예제 3 : 각 자릿수의 합 2
+
+```c
+// 각 자릿수의 합
+
+#include <stdio.h>
+
+int getDisitsum(int x) {
+  // x의 각 자릿수의 합을 반환하는 함수
+  
+  if(0 <= x && x <= 9) {
+    return x;
+  }
+  else {
+    return getDisitsum(x/10) + (x%10);
+  }
+}
+
+int main() {
+  int x;
+  
+  scanf("%d", &x);
+  
+  printf("%d\n", getDisitsum(x));
+  
+  return 0;
+}
+```
 
 
 
 ### 예제 4 : 이진수 출력하기 1
 
+[예제] 이진수 출력하기
+
+* 십진수 N을 입력받아 각 자릿수의 합을 구하시오
+
+```
+입력의 예
+10
+출력의 예
+1010
+
+입력의 예
+7
+출력의 예
+111
+```
+
+```
+2 | 10
+   ----
+     5  ... 0  <- 5를 이진수로 바꾸기 시작. 이 숫자를 2진수로 바꾼 후, 맨 뒤에 0(10을 2로 나눈 나머지)을 붙인다.  
+```
+
+printBinary(x) = x를 이진수로 바꾼 결과를 출력하는 함수
+
+printBinary(1) = 1을 출력
+
+printBinary(0) = 0을 출력
+
+```c
+void printBinary(int x) {
+  if(x == 0) print("0");
+  else if(x == 1) print("1");
+  else {
+    printBinary(x/2)
+    print("%d", x%2);
+  }
+}
+```
+
 
 
 ### 예제 4 : 이진수 출력하기 2
+
+```c
+// 이진수 출력하기
+
+#include <stdio.h>
+
+void printBinary(int x) {
+  // x를 이진수로 바꾸어 출력하는 함수
+  
+  if (x==0) printf("0");
+  else if (x==1) printf("1");
+  else {
+    printBinary(x/2);
+    printf("%d", x%2);
+  }
+}
+
+int main() {
+  int x;
+  
+  scanf("%d", &x);
+  
+  printBinary(x);
+  
+  return 0;
+}
+```
 
 
 
 ### 예제 5 : 팰린드롬인지 판별하기 1
 
+[예제] 팰린드롬인지 판별하기
+
+* 입력받은 문자열이 팰린드롬인지 판별하라
+* 단, 팰린드롬이란 뒤집어도 똑같은 문자열(좌우 대칭인 문자열)을 의미한다
+
+```
+입력의 예
+abcba
+출력의 예
+Yes
+
+입력의 예
+aabb
+출력의 예
+No
+```
+
+```
+a(bcdedcb)a
+```
+
+```
+isPalindrome(myString, start, end)
+= myString의 start부터 end까지가 palindrome이면 true 아니면 false를 반환하는 함수
+
+기저조건
+isPalindrome(myString, idx, idx) = true
+
+isPalindrome(myString, start, end) = 
+	if(myString[start] == myString[end])
+		return isPalindrome(myString, start+1, end-1)
+	else
+	return false
+```
+
 
 
 ### 예제 5 : 팰린드롬인지 판별하기 2
+
+디버깅
+
+한줄한줄 곱씹으면서 왜 이걸 썼는지, 논리적으로 문제가 없는지
+
+```c
+// 팰린드롬인지 판단하기
+
+#include <stdio.h>
+#include <string.h>
+
+bool isPalindrome(char myString[], int start, int end) {
+  // myString의 start ~ end가 팰린드롬이면 true,
+  // 아니면 flase를 반환하는 함수
+  
+  printf("%d %d\n", start, end);
+  
+  if(start == end) return true;
+  else if(start+1 == end) {
+    if(myString[start] == myString[end])
+    // aa bb cc
+      return true;
+    else
+      return false;
+  }
+  else {
+    if(myString[start] == myString[end]) {
+      return isPalindrome(myString, start+1, end-1);
+    }
+    else {
+      return false;
+    }
+  }
+}
+
+int main() {
+  char myString[100];
+  
+  scanf("%s", myString);
+  
+  int len = strlen(myString);
+  
+  // abcba
+  
+  if(isPalindrome(myString, 0, len-1))
+    printf("Yes\n");
+  else
+    printf("No\n");
+  
+  return 0;
+}
+```
 
 
 
