--- a/Algorithm/lecture/AlgorithmStudy/L7.md
+++ b/Algorithm/lecture/AlgorithmStudy/L7.md
@@ -667,6 +667,8 @@ bool isPalindrome(char myString[], int start, int end) {
   printf("%d %d\n", start, end);
   
   if(start == end) return true;
+  
+  // 알파벳 갯수 2개일 때 기저조건 추가
   else if(start+1 == end) {
     if(myString[start] == myString[end])
     // aa bb cc
