--- a/Algorithm/lecture/AlgorithmStudy/L2.md
+++ b/Algorithm/lecture/AlgorithmStudy/L2.md
@@ -70,6 +70,26 @@ int main() {
 }
 ```
 
+```c
+#include <stdio.h>
+
+int main() {
+  int n;
+  scanf("%d", &n);
+  
+  for(int i=1; i<=n; i++) {
+    for(int j=1; j<=i; j++) {
+      printf("*");
+    }
+    printf("\n");
+  }
+
+  return 0;
+}
+```
+
+
+
 삼각형 출력2
 
 ```c
@@ -311,13 +331,57 @@ int main() {
 역으로 출력하기
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int n;
+  int array[1000];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    scanf("%d", &array[i]);
+  }
+  
+  for(int i=n-1; i>=0; i--) {
+    printf("%d ", array[i]);
+  }
+
+  return 0;
+}
 ```
 
 최댓값
 
 ```c
+// 0점
 
+#include <stdio.h>
+
+int main() {
+  
+  int n = 0;
+  
+  int data[9];
+  
+  for(int i=0; i<9; i++) {
+    scanf("%d", &data[i]);
+  }
+  
+  int myMax = data[0];
+  
+  for(int i=0; i<9; i++) {
+    if(data[i] > myMax) {
+      myMax = data[i];
+    }
+    n = i;
+  }
+  
+  printf("%d\n", myMax);
+  printf("%d", n);
+
+  return 0;
+}
 ```
 
 두 번째 최솟값 찾기
