--- a/memo/20191002.md
+++ b/memo/20191002.md
@@ -201,3 +201,414 @@ name TEXT
 소문자로 써도 상관 X
 
 select * from examples;
+
+
+
+### Table과 DB
+
+05_DB users.csv
+
+$ sqlite3 tutorial.sqlite3
+
+(tutorial.sqlite3 우클 open database)
+
+CREATE TABLE classmates (
+
+id PRIMARY KEY,
+
+name TEXT
+
+);
+
+
+
+DROP TABLE classmates;
+
+create table classmates(
+
+id integer primary key,
+
+name text);
+
+
+
+Datatype
+
+boolean 없고 0, 1
+
+INT, VARCHAR, TEXT
+
+
+
+.tables .으로 시작하는 명령어는 sqlite에서만
+
+
+
+.tables
+
+.schema
+
+DROP TABLE classmates;  <- table이 drop됨
+
+
+
+New Query -> create_table.sql로 저장
+
+-- 주석
+
+```sqlite
+-- SQLite
+
+CREATE TABLE classmates(
+    -- id INTEGER PRIMARY KEY, -- id에 뭐 들어감
+    id INT PRIMARY KEY, -- id에 NULL
+    name TEXT,
+    age INT,
+    address TEXT
+);
+```
+
+
+
+sqlite> .read create_table.sql
+
+classmates 테이블에 데이터 넣기
+
+05_DB에 add_one_classmates.sql 파일 추가
+
+```sqlite
+INSERT INTO classmates(name, age)
+VALUES('안유림', 2);
+```
+
+.read add_one_classmates.sql
+
+classmates옆에 재생버튼
+
+drop table classmates;
+
+.read create_table.sql
+
+.read create_table.sql
+
+
+
+05_DB 새파일
+
+add_classmates.sql
+
+```sqlite
+INSERT INTO classmates(id, name, age, address)
+VALUES
+(1, '이설유', 3, '서울'),
+(2, '김탁희', 101, '대전');
+```
+
+(.read create_table.sql)
+
+.read add_classmates.sql
+
+
+
+```sql
+-- create_table.sql
+
+-- SQLite
+
+CREATE TABLE classmates(
+    -- id INTEGER PRIMARY KEY, -- id에 뭐 들어감
+    id INTEGER PRIMARY KEY AUTOINCREMENT, -- id에 NULL
+    name TEXT NOT NULL,  --  NOT NULL 비면 안됨
+    age INT NOT NULL,
+    address TEXT NOT NULL
+);
+```
+
+
+
+drop table classmates;
+
+.read create_table.sql
+
+
+
+.read add_one_classmates.sql
+
+near line 1: NOT NULL constraint failed: classmates.address 에러
+
+.read add_classmates.sql
+
+
+
+SELECT * FROM classmates;
+
+
+
+.mode column
+
+.headers on
+
+SELECT * FROM classmates;
+
+
+
+05_DB에 select.sql 만들기
+
+```sqlite
+SELECT name, age FROM classmates;
+SELECT id FROM classmates;
+
+SELECT * FROM classmates;
+```
+
+.read select.sql
+
+```sqlite
+SELECT * FROM classmates LIMIT 2;
+```
+
+.read select.sql
+
+```sqlite
+SELECT * FROM classmates LIMIT 1 OFFSET 1; 
+```
+
+```sqlite
+SELECT * FROM classmates WHERE name='김탁희';
+```
+
+```sqlite
+SELECT * FROM classmates WHERE address='서울';
+```
+
+```sqlite
+SELECT * FROM classmates WHERE address='서울' LIMIT 1;  -- 하나만
+```
+
+```sqlite
+-- SELECT name, age FROM classmates;
+-- SELECT id FROM classmates;
+
+-- SELECT * FROM classmates;
+
+-- LIMIT & OFFSET
+-- SELECT * FROM classmates LIMIT 2;  -- 앞에서 두개만
+-- -- SELECT * FROM classmates LIMIT 1 OFFSET 2;  -- 앞에 두개 띄고 한개만
+-- SELECT * FROM classmates LIMIT 1 OFFSET 1;
+
+-- WHERE
+-- SELECT * FROM classmates WHERE name='김탁희';
+-- SELECT * FROM classmates WHERE address='서울' LIMIT 1;  -- 하나만
+
+-- DISTINCT
+SELECT DISTINCT age FROM classmates;
+
+```
+
+.read select.sql
+
+
+
+05_DB에 delete.sql 만들기
+
+```sqlite
+-- DELETE SQLite
+
+-- 다 삭제됨
+-- DELETE FROM classmates;
+
+-- 특정한 ?? 삭제
+DELETE FROM classmates WHERE id=2;
+```
+
+.read delete.sql
+
+
+
+05_DB에 update.sql 만들기
+
+```sqlite
+SELECT * FROM classmates WHERE id=1;
+
+UPDATE classmates
+SET name='김싸피', address='서울', age=2
+WHERE id=1;
+
+SELECT * FROM classmates WHERE id=1;
+```
+
+.read update.sql
+
+^Z 나와서
+
+ls 해보고 users.csv 있는거 확인
+
+sqlite3 tutorial.sqlite3
+
+.mode csv
+
+.import users.csv users
+
+
+
+05_DB에 select2.sql 만들기
+
+```sqlite
+SELECT age FROM users;
+```
+
+```sqlite
+SELECT DISTINCT age FROM users;  -- 중복없이
+```
+
+.read select2.sql
+
+```sqlite
+SELECT * FROM users WHERE age = 30;  -- 30살만
+```
+
+
+
+```sqlite
+SELECT * FROM users WHERE age >= 30;  -- 30살 이상인 사람
+```
+
+.mode column
+
+.headers on
+
+```sqlite
+SELECT first_name FROM users WHERE age >= 30;  -- 나이가 30 이상인 사람들의 이름만
+```
+
+```sqlite
+-- users 에서 age 30이상, 성이 '김' 인 사람의 성과 나이만 가져온다면?
+SELECT age, last_name FROM users
+WHERE age >= 30 AND last_name='김';
+```
+
+.read select2.sql
+
+```sqlite
+-- users 에서 age 30이상, 성이 '김' 인 사람의 성과 나이만 가져온다면?
+SELECT age, last_name FROM users
+WHERE age >= 30 AND last_name='김'
+LIMIT 10;  -- 10개만
+```
+
+.read select2.sql
+
+```sqlite
+-- COUNT
+SELECT COUNT(*) FROM users;
+```
+
+```sqlite
+SELECT COUNT(id) FROM users;
+```
+
+```sqlite
+-- AVG, SUM, MIN, MAX (숫자 컬러만 가능)
+-- 30살 이상인 사람들의 평균나이
+
+SELECT AVG(age) FROM users
+WHERE age >= 30;
+```
+
+.read select2.sql
+
+```sqlite
+-- users 에서 잔액이 가장 높은 사람의 first_name과 잔액
+SELECT first_name, MAX(balance) FROM users;
+```
+
+```sqlite
+-- users에서 30살 이상인 사람의 계좌 평균 잔액은?
+SELECT AVG(balance) FROM users WHERE age >= 30;
+```
+
+
+
+### LIKE (wild cards)
+
+_ 반드시 이 자리에 한 개의 문자가 존재해야 한다.
+
+% 이 자리에 문자열이 있을수도, 없을수도 있다.
+
+```sqlite
+-- wild cards
+SELECT * FROM users WHERE age LIKE '2_';  -- 20대
+```
+
+
+
+users에서 지역번호가 02인 사람만?
+
+```sqlite
+SELECT phone FROM users
+WHERE phone LIKE '02-%';
+```
+
+
+
+users에서 이름이 '준'으로 끝나는 사람만?
+
+```sqlite
+SELECT first_name, last_name 
+FROM users
+WHERE first_name LIKE '%준';
+```
+
+
+
+users에서 중간 번호가 5114인 사람만?
+
+```sqlite
+SELECT phone FROM users
+WHERE phone LIKE '%5114%';
+```
+
+
+
+### 정렬(ORDER)
+
+users에서 나이순으로 오름차순 정렬하여 상위 10개만 뽑기
+
+```sqlite
+-- ORDER
+SELECT age, first_name FROM users
+ORDER BY age ASC LIMIT 10;
+```
+
+```sqlite
+SELECT age, first_name FROM users
+ORDER BY age DESC LIMIT 10;
+```
+
+```sqlite
+SELECT age, balance FROM users
+ORDER BY age, balance LIMIT 10;
+-- users에 지정을 따로 안해서 다 TEXT이므로 balance 텍스트 기준 오름차순
+```
+
+```sqlite
+SELECT age, last_name FROM users
+ORDER BY last_name, age LIMIT 10;
+-- last_name 우선순위
+```
+
+```sqlite
+SELECT age, last_name FROM users
+ORDER BY age, last_name LIMIT 10;
+-- age 우선순위
+```
+
+
+
+users에서 계좌잔액순으로 내림차순 정렬하여 해당하는 사람의 성과 이름을 10개만 뽑기
+
+```sqlite
+SELECT first_name, balance FROM users
+ORDER BY balance DESC LIMIT 10;
+```
+
