--- a/Algorithm/lecture/AlgorithmStudy/L2.md
+++ b/Algorithm/lecture/AlgorithmStudy/L2.md
@@ -381,13 +381,118 @@ int main() {
   printf("%d", n);
 
   return 0;
+}	
+```
+
+```c
+// 70점
+
+#include <stdio.h>
+
+int main() {
+  
+  int n = 0;
+  
+  int data[9];
+  
+  for(int i=0; i<9; i++) {
+    scanf("%d", &data[i]);
+  }
+  
+  int myMax = data[0];
+  
+  for(int i=0; i<9; i++) {
+    if(data[i] > myMax) {
+      myMax = data[i];
+      n = i+1;
+    }
+  }
+  
+  printf("%d\n", myMax);
+  printf("%d", n);
+
+  return 0;
 }
 ```
+
+```c
+// 100점
+
+#include <stdio.h>
+
+int main() {
+  
+  int n = 1;
+  
+  int data[9];
+  
+  for(int i=0; i<9; i++) {
+    scanf("%d", &data[i]);
+  }
+  
+  int myMax = data[0];
+  
+  for(int i=0; i<9; i++) {
+    if(data[i] > myMax) {
+      myMax = data[i];
+      n = i+1;
+    }
+  }
+  
+  printf("%d\n", myMax);
+  printf("%d", n);
+
+  return 0;
+}
+```
+
+
 
 두 번째 최솟값 찾기
 
 ```c
+#include <stdio.h>
 
+int main() {
+  
+  int n = 0;
+  
+  int data[9];
+  int data2[9];
+  
+  for(int i=0; i<9; i++) {
+    scanf("%d", &data[i]);
+  }
+  
+  for(int a=0; a<9; a++) {
+    data2[a] = data[a];
+  }
+  
+  // 선택정렬
+  for(int i=0; i<9; i++) {
+    int inx = i;
+    for(int j=i; j<9; j++) {
+      if(data[inx] > data[j]) {
+        inx = j;
+      }
+    }
+    int temp;
+    temp = data[i];
+    data[i] = data[inx];
+    data[inx] = temp;
+  }
+  
+  printf("%d", data[1]);
+  printf("\n");
+  
+  for(int i=0; i<9; i++) {
+    if (data[1]==data2[i]) {
+      printf("%d", i+1);
+    }
+  }
+  
+  return 0;
+}
 ```
 
 점수 계산
