--- a/memo/20191004.md
+++ b/memo/20191004.md
@@ -73,9 +73,9 @@ NOT NULL DEFAULT 1;
 
 lab.ssafy.com
 
-rm -rf workshop_HW/
+`rm -rf workshop_HW/`
 
-git clone https://lab.ssafy.com/02/seoul03/workshop_hw.git
+`git clone https://lab.ssafy.com/02/seoul03/workshop_hw.git`
 
 window-자격 증명 관리자
 
@@ -87,4 +87,65 @@ ls submission
 
 Clone - Clone with HTTPS
 
-git clone https://lab.ssafy.com/seolyu/submission.git
+`git clone https://lab.ssafy.com/seolyu/submission.git`
+
+
+
+C:\    python -V하면 3.5나옴
+
+users
+
+student(~)
+
+TIL
+
+06_django_advance
+
+01_django_recap
+
+python 3.7 쓰고 싶으면 01_django_recap 안에서 
+
+`py -m venv venv`  // 앞에 venv는 명령어 뒤는 이름. py -m venv adsf해보면 adsf 생김(지울 때 rm -rf adsf)
+
+ls 해보면 venv 폴더 생겨져있음
+
+`python -V` 쳐보면 Python 3.5 나옴
+
+`source venv/Scripts/activate`  // python 3.7 독립공간 됨. (venv)
+
+`python -V` 쳐보면 Python 3.7 나옴
+
+
+
+프로젝트 할 때 무조건 독립시켜야함. 캡슐화
+
+터미널이 독립적으로 움직이므로 터미널 껐다 켜면 꺼져있음
+
+
+
+F1누르고 Select Interpreter에서 venv venv 선택 -> .vscode 생김
+
+터미널 껐다 켜기 (venv)
+
+`pip install django` 치면 밖 아니고 (venv)에만 설치됨
+
+(venv) 독립가상환경
+
+`pip list` <-  (venv) 안에 있는 것들 나옴
+
+`python -m pip install --upgrade pip`
+
+
+
+`django-admin startproject django_recap`
+
+01_DJANGO_RECAP 안에 django_recap 생겨버림
+
+`rm -rf django_recap/`  // 지우기
+
+`django-admin startproject django_recap .`  // 이렇게 치면 됨
+
+
+
+django_recap을 Master APP이라고 함
+
