--- a/memo/20191004.md
+++ b/memo/20191004.md
@@ -149,3 +149,218 @@ F1누르고 Select Interpreter에서 venv venv 선택 -> .vscode 생김
 
 django_recap을 Master APP이라고 함
 
+ 상위폴더(과목) 말고 프로젝트를 Open with Code열기
+
+`git add . && git commit -m 'Init project'`
+
+`django-admin startapp home`
+
+master app에 settings.py 40번째 줄에 
+
+'home', 등록
+
+107번째 줄에 LANGUAGE_CODE = 'ko-kr'
+
+`python manage.py runserver`
+
+http://127.0.0.1:8000/  Ctrl+클릭
+
+
+
+urls.py에
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'home'
+
+urlpatterns = [
+    path('', views.index, name='index'),  # HOST/home// == HOST/home/
+    path('hi/<str:name>/', views.hi),  # HOST/home/hi/
+                                       # <str:name> 변수처리
+]
+```
+
+home 안에 urls.py 만들기
+
+```python
+from django.urls import path
+from . import views
+
+urlpatterns = [
+    path('', views.index),  # HOST/home// == HOST/home/
+    path('hi/<str:name>/', views.hi),  # HOST/home/hi/
+                                       # <str:name> 변수처리
+]
+```
+
+home - views.py
+
+```python
+from django.shortcuts import render, HttpResponse
+
+
+def index(request):
+    return render(request, 'home/index.html')
+
+def hi(request, name):
+    # return HttpResponse(f'hi {name}')
+    return render(request, 'home/hi.html', {'name': name})
+```
+
+home 안에 templates 폴더 만들고 그 안에 home 폴더 만들고 그 안에 index.html 파일 만들기
+
+index.html
+
+```html
+{% extends 'home/base.html' %}
+
+{% block title %}
+    INDEX
+{% endblock %}
+
+{% block body %}
+    <h1>This is index</h1>
+    
+{% endblock %}
+```
+
+hi.html도 만들기
+
+```html
+{% extends 'home/base.html' %}
+
+{% block title %}
+    Greeting Page :)
+{% endblock %}
+
+{% block body %}
+    <h1>Hi :) {{ name }}</h1>
+{% endblock %}
+```
+
+```html
+{% extends 'home/base.html' %}
+
+{% block title %}
+    Greeting Page :)
+{% endblock %}
+
+{% block body %}
+    {% if name == 'hi' %}
+        <h1>hihi??</h1>
+    {% else %}
+        <h1>Hi :) {{ name }}</h1>
+    {% endif %}
+{% endblock %}
+```
+
+
+
+base.html도 만들기
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> {% block title %}{% endblock %}</title>
+</head>
+<body>
+    <ul>
+        <li><a href="{% url 'home:index' %}">Index</a></li>
+        <li><a href="{% url 'home:guess' %}">guess</a></li>
+    </ul>
+    {% block body %}
+    {% endblock %}
+</body>
+</html>
+```
+
+
+
+views.py
+
+```python
+from django.shortcuts import render, HttpResponse
+
+
+def index(request):
+    return render(request, 'home/index.html')
+
+# def hi(request, name):
+#     # return HttpResponse(f'hi {name}')
+#     return render(request, 'home/hi.html', {'name': name})
+
+def guess(request):
+    return render(request, 'home/guess.html')
+
+
+def answer(request):
+    
+    count = 0
+    if request.GET.get('q1') == 'a':
+        count += 1
+    if request.GET.get('q2') == 'b':
+        count += 1
+    if request.GET.get('q3') == '':
+        count += 1
+        
+    # 채점
+    return render(request, 'home/answer.html', {
+        'count': count,
+    })
+```
+
+guess.html
+
+```html
+{% extends 'home/base.html' %}
+
+{% block title %}
+    <!-- Greeting Page :) -->
+    Guess me
+{% endblock %}
+
+{% block body %}
+    <!-- {% if name == 'hi' %}
+        <h1>hihi??</h1>
+    {% else %}
+        <h1>Hi :) {{ name }}</h1>
+    {% endif %} -->
+    <h1>질문지</h1>
+    <form action="{% url 'home:answer' %}">
+        <div> 
+            <label for="q1">내 생일은?</label>
+            <input id="q1" name="q1" type="text">
+        </div>
+        <div>
+            <label for="q2">내 머리 길이는?</label>
+            <input id="q2" name="q2" type="text">
+        </div>
+        <div>
+            <label for="q3">내 무릎 상태는?</label>
+            <input id="q3" name="q3" type="text">
+        </div>
+        <input type="submit">
+    </form>
+{% endblock %}
+```
+
+answer.html
+
+```html
+{% extends 'home/base.html' %}
+{% block title %}
+    Answer
+{% endblock %}
+
+{% block body %}
+    <h1>Answer</h1>
+    <p>{{ count }} 개 맞았습니다.</p>
+{% endblock %}
+```
+
