--- a/Algorithm/lecture/AlgorithmStudy/L2.md
+++ b/Algorithm/lecture/AlgorithmStudy/L2.md
@@ -504,7 +504,47 @@ int main() {
 card game
 
 ```c
+#include <stdio.h>
 
+int main() {
+  int a[10];
+  int b[10];
+  int A = 0;
+  int B = 0;
+  int C = 0;
+  
+  for(int i=0; i<10; i++) {
+    scanf("%d", &a[i]);
+  }
+  
+  for(int i=0; i<10; i++) {
+    scanf("%d", &b[i]);
+  }
+  
+  for(int i=0; i<10; i++) {
+    if(a[i] > b[i]) {
+      A++;
+    }
+    else if(a[i] < b[i]) {
+      B++;
+    }
+    else {
+      C++;
+    }
+  }
+  
+  if (A > B) {
+    printf("A");
+  }
+  else if (A < B) {
+    printf("B");
+  }
+  else {
+    printf("D");
+  }
+  
+  return 0;
+}
 ```
 
 주사위 게임
