--- a/memo/20191007.md
+++ b/memo/20191007.md
@@ -483,3 +483,331 @@ a.title = 'bye'
 a.content = 'lunch time'
 
 a.save()
+
+
+
+urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.list, name='list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:id>/', views.detail, name='detail'),
+
+    # Create 글 쓰기(new) render
+    # Create 글 저장(create)
+
+    # Update 글 수정쓰기(edit) render
+    # Update 글 실제수정(update)
+
+    # Delete 글 삭제(delete)
+]
+```
+
+
+
+views.py
+
+```python
+from django.shortcuts import render
+
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    return render(request, 'board/list.html')
+
+
+def detail(request, id):
+    return render(request, 'board/detail.html')
+```
+
+
+
+board - templates - board에 detail.html과 list.html 만들기
+
+list.html 
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article list{% endblock title %}
+
+{% block body %}
+<h1>This is Article list</h1>
+{% endblock body %}
+```
+
+detail.html
+
+```html
+<-- endblock 뒤에 title, content 지워도 됨-->
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+{% endblock body %}
+```
+
+python manage.py runserver
+
+http://127.0.0.1:8000/board/articles/
+
+
+
+views.py
+
+```python
+from django.shortcuts import render
+from .models import Article
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+```
+
+
+
+list.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article list{% endblock title %}
+
+{% block body %}
+<h1>This is Article list</h1>
+
+<ul>
+    {% for article in articles %}  <!-- [<A1>, <A2>, <A3>] -->
+        <li>
+            <a href="{% url 'board:detail' article.id %}">
+                {{ article.title }}
+            </a>
+            {% comment %} /board/articles/{{article.id}} {% endcomment %}
+        </li>  <!-- <A1> -->
+    {% endfor%}
+</ul>
+{% endblock body %}
+```
+
+
+
+board - templates - views.py
+
+```python
+from django.shortcuts import render
+from .models import Article
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+```
+
+
+
+detail.html
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}Article detail{% endblock title %}
+
+{% block body %}
+    <h1>{{ article.title }}</h1>
+    <p>
+        {{ article.content }}
+    </p>
+{% endblock body %}
+```
+
+
+
+#### NoReverseMatch - url 틀려서 나온 에러
+
+
+
+board - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'board'
+
+urlpatterns = [
+    path('', views.index, name='index'),  # /board/ == board:index
+    # Read 글 목록(list) render
+    path('articles/', views.list, name='list'),
+    # Read 글 상세(detail) render
+    path('articles/<int:id>/', views.detail, name='detail'),
+
+    # Create 글 쓰기(new) render
+    path('articles/new/', views.new, name='new'),
+    # Create 글 저장(create)
+    path('articles/create/', views.create, name='create'),
+
+    # Update 글 수정쓰기(edit) render
+    # Update 글 실제수정(update)
+
+    # Delete 글 삭제(delete)
+]
+```
+
+
+
+board - views.py
+
+```python
+from django.shortcuts import render, redirect
+from .models import Article
+
+def index(request):
+    return render(request, 'board/index.html')
+
+
+def list(request):
+    articles = Article.objects.all()  # [<A1>, <A2>, <A3>, ...] 이런 식으로 return
+    return render(request, 'board/list.html', {
+        'articles': articles,
+    })
+
+
+def detail(request, id):
+    article = Article.objects.get(id=id)  # <A_id>
+    return render(request, 'board/detail.html', {
+        'article': article,
+    })
+
+
+def new(request):
+    return render(request, 'board/new.html')
+
+
+def create(request):
+    article = Article()
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+
+    # return redirect(f'/board/articles/{article.id}')
+    return redirect('board:detail', article.id)
+```
+
+
+
+board - templates - board - new.html 만들고
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}New article{% endblock title %}
+
+{% block body %}
+<h1>New article</h1>
+
+<form action="" method="POST">
+    {% csrf_token %}
+    <label for=""></label>
+    <div>
+        <label for="title">제목:</label>
+        <input id="title" name="title" value="Hello :)">
+    </div>
+    <div>
+        <label for="content">내용:</label>
+        <textarea id="content" name="content" cols="30" rows="10">hi</textarea>
+    </div>
+    <div>
+        <input type="submit" value="제출!">
+    </div>
+</form>
+{% endblock body %}
+```
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}New article{% endblock title %}
+
+{% block body %}
+<h1>New article</h1>
+
+<form action="" method="POST">
+    {% csrf_token %}
+    <label for=""></label>
+    <div>
+        <label for="title">제목:</label>
+        <input id="title" name="title">
+    </div>
+    <div>
+        <label for="content">내용:</label>
+        <textarea id="content" name="content" cols="30" rows="10"></textarea>
+    </div>
+    <div>
+        <input type="submit" value="제출!">
+    </div>
+</form>
+{% endblock body %}
+```
+
+```html
+{% extends 'board/base.html' %}
+{% block title %}New article{% endblock title %}
+
+{% block body %}
+<h1>New article</h1>
+
+<form action="{% url 'board:create' %}" method="POST">
+    {% csrf_token %}
+    <label for=""></label>
+    <div>
+        <label for="title">제목:</label>
+        <input id="title" name="title">
+    </div>
+    <div>
+        <label for="content">내용:</label>
+        <textarea id="content" name="content" cols="30" rows="10"></textarea>
+    </div>
+    <div>
+        <input type="submit" value="제출!">
+    </div>
+</form>
+{% endblock body %}
+```
+
+
+
+http://127.0.0.1:8000/board/articles/new/
+
+
+
